<resources>
    <string name="app_name">MyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="courses">courses</string>
    <string name="certificate">certificate</string>
    <string name="profile">profile</string>
    <string name="more">more</string>
    <string name="getdata">GET Data</string>
    <string name="screening">Screening</string>
    <string name="player">Player</string>
</resources>